# BOT-TRADE-DEMO

./: README.md
fx_orchestra/: .env.example  README.md  pyproject.toml
fx_orchestra/docker/: Dockerfile  docker-compose.yml
fx_orchestra/monitoring/grafana_dashboards/: equity_dashboard.json
fx_orchestra/scripts/: backtest_single_pair.py  download_historical.py
fx_orchestra/src/: main.py
fx_orchestra/src/agents/perception/macro/region/: us.py
fx_orchestra/src/agents/perception/sentiment/social_media/: twitter.py
fx_orchestra/src/agents/perception/technical/trend/: sma.py
fx_orchestra/src/agents/strategy/signal_fusion/: technical_fusion.py
fx_orchestra/src/agents/tools/: fetch_ohlcv.py
fx_orchestra/src/config/: base.py  schema.py
fx_orchestra/src/core/: types.py
fx_orchestra/src/data/sources/: oanda_v20.py
fx_orchestra/src/data/storage/: timescaledb.py
fx_orchestra/src/execution/learning/: self_correction.py
fx_orchestra/src/notifications/: telegram.py
fx_orchestra/src/orchestrator/: hybrid_flow.py  paper.py
fx_orchestra/src/risk/: graph.py
fx_orchestra/src/risk/nodes/: drawdown_guard.py
fx_orchestra/src/risk/pair_risk/: eurusd_risk.py
fx_orchestra/src/risk/risk_type/: volatility_atr.py
fx_orchestra/tests/integration/: test_hybrid_flow.py
fx_orchestra/tests/unit/: test_execution.py  test_risk_nodes.py
